welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:9: error: reassignment to val
		die1 = die1 + 1 || die2 = die2 + 1
                     ^